fixed issue with links not wraping in Chromium-based browsers

--- a/src/sass/components/_user-links.scss
+++ b/src/sass/components/_user-links.scss
@@ -7,8 +7,8 @@
 
   @include mq(medium) {
     grid-template-columns:
-      auto 0.8125em 1fr clamp(1.1875em, 1.1875em + 4vw, 2.75em)
-      auto 0.8125em 1fr;
+      auto 0.8125em minmax(0, 1fr) clamp(1.1875em, 1.1875em + 4vw, 2.75em)
+      auto 0.8125em minmax(0, 1fr);
     gap: 1.1875em 0;
 
     dd:nth-of-type(1) {
@@ -59,9 +59,12 @@
   }
 
   a {
-    display: inline-block;
+    display: block;
     text-decoration: none;
     color: currentColor;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
     position: relative;
     isolation: isolate;
 
